#20 improve printing and use generated embeddings if they are within 1 percent of the number of audio files, that way broken audio files don't prevent using exisiting embeddings

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ bacpipe/tests/.pytest*
 config.yaml
 
 # Ignore everything in results
-results/*
+*results/*
 
 # But NOT these specific paths:
 results/test_data/evaluations/
