--- a/pyproject.toml
+++ b/pyproject.toml
@@ -190,3 +190,6 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.setuptools.package-data]
+"bacpipe" = ["*.yaml"]
