minor fixes and version fix

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bacpipe"
-version = "1.1.00"
+version = "1.1.0"
 description = "Use bacpipe to streamline the process of generating embeddings and analysing your PAM datasets."
 readme = "README.md"
 authors = [
@@ -193,3 +193,7 @@ build-backend = "hatchling.build"
 
 [tool.setuptools.package-data]
 "bacpipe" = ["*.yaml", "*.png"]
+
+
+# Add this to include your package
+packages = ["bacpipe"]
