--- a/bacpipe/settings.yaml
+++ b/bacpipe/settings.yaml
@@ -8,7 +8,7 @@ device: 'cpu'
 
 # fixed path, model checkpoints are/should be stored here
 # this is also where bacpipe will look for existing checkpoints
-model_base_path: "bacpipe/model_checkpoints"
+model_base_path: bacpipe/model_checkpoints
 
 # batch size for embedding generation, modify if you have memory issues
 # or if you want to speed up the process and have enough memory available
@@ -80,13 +80,13 @@ class_configs:
     learning_rate: 0.001
     batch_size: 64
     num_epochs: 10
-    dataset_csv_path: "classification_dataframe.csv"
+    dataset_csv_path: classification_dataframe.csv
     shuffle: False
   config_2:
     bool: True
     name: "knn"
     n_neighbors: 15
-    dataset_csv_path: "classification_dataframe.csv"
+    dataset_csv_path: classification_dataframe.csv
 
 
 ## CLUSTERING SETTINGS ##
@@ -129,10 +129,11 @@ distance_configs:
 
 # fixed path, embeddings will be stored here, advised not to change
 # because this is also where bacpipe will look for existing embeddings
-main_results_dir :      "bacpipe_results"
-embed_parent_dir :      "embeddings"
-dim_reduc_parent_dir :  "dim_reduced_embeddings"
-evaluations_dir :       "evaluations"
+### IMPORTANT! WINODWS USERS DON'T USE QUOTATIONS HERE
+main_results_dir :      bacpipe_results
+embed_parent_dir :      embeddings
+dim_reduc_parent_dir :  dim_reduced_embeddings
+evaluations_dir :       evaluations
 
 # If set to true bacpipe will always use the same test files and save it in a 
 # directory other than the results directory. Results will also be deleted at 
