--- a/bacpipe/config.yaml
+++ b/bacpipe/config.yaml
@@ -10,13 +10,13 @@
 # PATHS:
 # define paths for your audio data
 ### IMPORTANT! WINODWS USERS DON'T USE QUOTATIONS HERE
-audio_dir :       bacpipe/tests/test_data
+audio_dir :       /mnt/swap/Work/Data/Amphibians/AnuranSet/AnuranSet
 
 #####################    PROCESS SETTINGS    ##############################
 
 # specify if you want to overwrite the existing evaluation results
 # this is useful if you want to re-run the evaluation with different parameters
-overwrite: False
+overwrite: True
 
 
 # specify if you want to visualize the embedding evaluations
@@ -30,6 +30,8 @@ dashboard: True
 models: [
       "birdnet",
       "perch_bird",
+      "naturebeats",
+      "birdmae"
   ]
 
   # if already_computed is True, the embeddings will be loaded from the
@@ -54,8 +56,8 @@ dim_reduction_model: "umap"
 #########################################################################
 
 evaluation_task: [
-  # "clustering",
-  # "classification"
+  "clustering",
+  "classification"
 ]
 
 
