add options to settings

--- a/bacpipe/settings.yaml
+++ b/bacpipe/settings.yaml
@@ -70,8 +70,9 @@ label_column: 'species'
 # if the model has a classifier that ships with the model, by default 
 # it will be used, to provide another option to colorcode embeddings
 # and visualize differences between embeddings. 
-run_pretrained_classifier: False
+run_pretrained_classifier: True
 classifier_threshold: 0.3
+only_embed_annotations: True
 
 class_configs:
   config_1:
