--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,6 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install -r pyproject.toml
+      - run: pip install uv
+      - run: uv pip install -r pyproject.toml
       - run: pytest bacpipe/tests/test_embedding_generation.py
