--- a/.github/workflows/requirements-cpu-ci.txt
+++ b/.github/workflows/requirements-cpu-ci.txt
@@ -1,10 +1,10 @@
-matplotlib==3.10.6
+#matplotlib==3.10.6
 #numpy==1.26
 #panel==1.8.1
 pytest==8.4.2
 scikit-learn==1.7.1
 scipy==1.13.1
-seaborn==0.13.2
+#seaborn==0.13.2
 #tensorflow==2.20.0
 
 torch==2.6.0+cpu
@@ -14,4 +14,4 @@ torchvision==0.21.0+cpu
 
 #transformers==4.56.0
 
-umap-learn==0.5.9.post2
+#umap-learn==0.5.9.post2
