--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,5 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: pip install uv
-      - run: uv pip install --system -r .github/workflows/requirements-cpu-ci.txt
+      - run: pip install --system -r .github/workflows/requirements-cpu-ci.txt
       - run: pytest bacpipe/tests/test_embedding_generation.py
