--- a/.github/workflows/requirements-cpu-ci.txt
+++ b/.github/workflows/requirements-cpu-ci.txt
@@ -7,10 +7,10 @@ scipy==1.13.1
 #seaborn==0.13.2
 #tensorflow==2.20.0
 
-torch==2.6.0+cpu
-torchaudio==2.6.0+cpu
-torchvision==0.21.0+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
+#torch==2.6.0+cpu
+#torchaudio==2.6.0+cpu
+#torchvision==0.21.0+cpu
+#--extra-index-url https://download.pytorch.org/whl/cpu
 
 #transformers==4.56.0
 
