--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,26 +138,25 @@ dependencies = [
     "tensorboard==2.20.0",
     "tensorboard-data-server==0.7.2",
     "tensorflow==2.20.0",
-    "tensorflow-estimator==2.15.0",
     "tensorflow-hub==0.16.0",
     
     # Packages to skip on Windows
-    "bokeh==3.7.3; sys_platform != 'win32'",
-    "nvidia-cublas-cu12==12.4.5.8; sys_platform != 'win32'",
-    "nvidia-cuda-cupti-cu12==12.4.127; sys_platform != 'win32'",
-    "nvidia-cuda-nvrtc-cu12==12.4.127; sys_platform != 'win32'",
-    "nvidia-cuda-runtime-cu12==12.4.127; sys_platform != 'win32'",
-    "nvidia-cudnn-cu12==9.1.0.70; sys_platform != 'win32'",
-    "nvidia-cufft-cu12==11.2.1.3; sys_platform != 'win32'",
-    "nvidia-curand-cu12==10.3.5.147; sys_platform != 'win32'",
-    "nvidia-cusolver-cu12==11.6.1.9; sys_platform != 'win32'",
-    "nvidia-cusparse-cu12==12.3.1.170; sys_platform != 'win32'",
-    "nvidia-cusparselt-cu12==0.6.2; sys_platform != 'win32'",
-    "nvidia-nccl-cu12==2.21.5; sys_platform != 'win32'",
-    "nvidia-nvjitlink-cu12==12.4.127; sys_platform != 'win32'",
-    "nvidia-nvtx-cu12==12.4.127; sys_platform != 'win32'",
-    "triton==3.2.0; sys_platform != 'win32'",
-    "uvloop==0.20.0; sys_platform != 'win32'",
+    "bokeh==3.7.3; sys_platform == 'linux'",
+    "nvidia-cublas-cu12==12.4.5.8; sys_platform == 'linux'",
+    "nvidia-cuda-cupti-cu12==12.4.127; sys_platform == 'linux'",
+    "nvidia-cuda-nvrtc-cu12==12.4.127; sys_platform == 'linux'",
+    "nvidia-cuda-runtime-cu12==12.4.127; sys_platform == 'linux'",
+    "nvidia-cudnn-cu12==9.1.0.70; sys_platform == 'linux'",
+    "nvidia-cufft-cu12==11.2.1.3; sys_platform == 'linux'",
+    "nvidia-curand-cu12==10.3.5.147; sys_platform == 'linux'",
+    "nvidia-cusolver-cu12==11.6.1.9; sys_platform == 'linux'",
+    "nvidia-cusparse-cu12==12.3.1.170; sys_platform == 'linux'",
+    "nvidia-cusparselt-cu12==0.6.2; sys_platform == 'linux'",
+    "nvidia-nccl-cu12==2.21.5; sys_platform == 'linux'",
+    "nvidia-nvjitlink-cu12==12.4.127; sys_platform == 'linux'",
+    "nvidia-nvtx-cu12==12.4.127; sys_platform == 'linux'",
+    "triton==3.2.0; sys_platform == 'linux'",
+    "uvloop==0.20.0; sys_platform == 'linux'",
 
     "tensorstore==0.1.74",
     "termcolor==3.1.0",
