--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ dependencies = [
     "jsonschema==4.25.1",
     "jsonschema-specifications==2025.4.1",
     "kagglehub==0.3.13",
-    "keras==3.11.0",
+    "keras==3.11.0; sys_platform == 'linux'",
     "kiwisolver==1.4.9",
     "lazy-loader==0.4",
     "libclang==18.1.1",
@@ -78,7 +78,7 @@ dependencies = [
     "mdit-py-plugins==0.5.0",
     "mdurl==0.1.2",
     "ml-collections==0.1.0",
-    "ml-dtypes==0.5.3",
+    "ml-dtypes==0.5.3; sys_platform=='linux'",
     "mpmath==1.3.0",
     "msgpack==1.1.1",
     "narwhals==2.3.0",
@@ -101,7 +101,7 @@ dependencies = [
     "pluggy==1.6.0",
     "pooch==1.8.2",
     "proto-plus==1.26.1",
-    "protobuf==6.32.1",
+    "protobuf==6.32.1; sys_platform=='linux'",
     "pyarrow==16.1.0",
     "pyarrow-hotfix==0.7",
     "pyasn1==0.6.1",
@@ -135,12 +135,13 @@ dependencies = [
     "sounddevice==0.4.7",
     "soundfile==0.12.1",
     "soxr==0.3.7",
-    "tensorboard==2.20.0",
-    "tensorboard-data-server==0.7.2",
-    "tensorflow==2.20.0",
-    "tensorflow-hub==0.16.0",
+    "tensorflow==2.15.1; sys_platform == 'win32'",
     
     # Packages to skip on Windows
+    "tensorboard==2.20.0; sys_platform == 'linux'",
+    "tensorboard-data-server==0.7.2; sys_platform == 'linux'",
+    "tensorflow==2.20.0; sys_platform == 'linux'",
+    "tensorflow-hub==0.16.0; sys_platform == 'linux'",
     "bokeh==3.7.3; sys_platform == 'linux'",
     "nvidia-cublas-cu12==12.4.5.8; sys_platform == 'linux'",
     "nvidia-cuda-cupti-cu12==12.4.127; sys_platform == 'linux'",
@@ -157,8 +158,8 @@ dependencies = [
     "nvidia-nvtx-cu12==12.4.127; sys_platform == 'linux'",
     "triton==3.2.0; sys_platform == 'linux'",
     "uvloop==0.20.0; sys_platform == 'linux'",
+    "tensorstore==0.1.74; sys_platform=='linux'",
 
-    "tensorstore==0.1.74",
     "termcolor==3.1.0",
     "threadpoolctl==3.6.0",
     "timm==1.0.11",
