--- a/bacpipe/config.yaml
+++ b/bacpipe/config.yaml
@@ -10,7 +10,8 @@
 # PATHS:
 # define paths for your audio data
 ### IMPORTANT! WINODWS USERS DON'T USE QUOTATIONS HERE
-audio_dir :       unknown_sounds_2_within_file_2_diff_file_5s
+# audio_dir :       unknown_sounds_2_within_file_2_diff_file_5s
+audio_dir :       unknown_sounds_2_within_file_1_diff_file_3s
 
 #####################    PROCESS SETTINGS    ##############################
 
@@ -28,11 +29,20 @@ dashboard: True
 
 # embedding model name
 models: [
-      "birdnetAugPeriodTS",
-      "birdnetAugLinClf",
-      "birdnetAugTS",
       "birdnet",
-      # "perch_bird",
+      "birdnetAugTS",
+      "birdnetAugLinClf",
+      "birdnetAugPeriodTS",
+      "perch_bird",
+      "perch_v2",
+      "naturebeats",
+      # "audioprotopnet",
+      # "birdmae",
+      "beats",
+      "aves_especies",
+      "biolingual",
+      "insect66",
+      "protoclr"
   ]
 
   # if already_computed is True, the embeddings will be loaded from the
@@ -57,8 +67,8 @@ dim_reduction_model: "umap"
 #########################################################################
 
 evaluation_task: [
-  "clustering",
-  "classification"
+  # "clustering",
+  # "classification"
 ]
 
 
